<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_label">TITLE</string>
    <string name="dream_title">Enter a title for the dream</string>
    <string name="dream_realized">Realized</string>
    <string name="dream_deferred">Deferred</string>
    <string name="dream_details_label">DETAILS</string>
    <string name="dream_entry_0_button">DREAM REVEALED</string>
    <string name="dream_entry_1_button">DREAM ENTRY 1</string>
    <string name="dream_entry_2_button">DREAM ENTRY 2</string>
    <string name="dream_entry_3_button">DREAM ENTRY 3</string>
    <string name="dream_entry_4_button">DREAM REALIZED/DEFERRED</string>
    <string name="new_dream">New Dream</string>
    <string name="take_dream_photo">Take Dream Photo</string>
    <string name="share_dream">Share Dream</string>
    <string name="share_dream_text">%1$s, %2$s, %3$s, and %4$s</string>
    <string name="all_dreams">All Dreams</string>
    <string name="active_dreams">Active Dreams</string>
    <string name="realized_dreams">Realized Dreams</string>
    <string name="deferred_dreams">Deferred Dreams</string>
    <string name="menu">Menu</string>
</resources>
